[project]
name = "python_batch_prefix_suffix_adder"
version = "1.0.0"
description = "Command line Renamer program"
requires-python = ">=3.8"

[project.scripts]
add_prefix = "python_batch_prefix_suffix_adder.main:main"
prefix = "python_batch_prefix_suffix_adder.main:main"
add_suffix = "python_batch_prefix_suffix_adder.main:main"
suffix = "python_batch_prefix_suffix_adder.main:main"
